# python-starter

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
src/: main.py
tests/: test_example.py
