[project]
name = "starter"
version = "1.0.0"
requires-python = ">=3.11"
authors = [{ name = "example", email = "example@gmail.com" }]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.docformatter]
recursive = true
in-place = true
wrap-summaries = 79
wrap-descriptions = 79
blank = true
pre-summary-newline = true

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
